--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .default-button-pattern {
+    @apply mt-2 px-8 py-2 rounded-lg font-bold leading-[1.125rem] disabled:bg-gray-400 disabled:cursor-not-allowed hover:cursor-pointer
+  }
+  .default-input-pattern {
+    @apply p-2 text-sm leading-4 border-gray-400 border-[1px] rounded-lg focus:outline-lilac-400
+  }
+}
